# vscode-profile-extension-manager

./: .gitignore  README.md  bump-version-and-release.sh  default.txt  dump-extensions.py  dump-extensions.sh  extract.sh  install-extensions.sh  main.py  manage_extensions.py  pyproject.toml  requirements.txt  vpem.spec  vscode-extensions-with-desc.txt  vscode-extensions.txt
assets/: VPEM-apply.webm  VPEM-dump.webm
backup/: vscode-extensions-with-desc.txt.2024-09-17-091511  vscode-extensions-with-desc.txt.2024-09-17-091633  vscode-extensions-with-desc.txt.2024-09-17-091644  vscode-extensions-with-desc.txt.2024-09-17-091648  vscode-extensions-with-desc.txt.2024-09-17-091651  vscode-extensions-with-desc.txt.2024-09-17-091710  vscode-extensions-with-desc.txt.2024-09-17-091723  vscode-extensions-with-desc.txt.2024-09-17-091746  vscode-extensions-with-desc.txt.2024-09-17-091800  vscode-extensions-with-desc.txt.2024-09-17-091806  vscode-extensions-with-desc.txt.2024-09-17-091832  vscode-extensions-with-desc.txt.2024-09-17-091839  vscode-extensions-with-desc.txt.2024-09-17-092039  vscode-extensions-with-desc.txt.2024-09-17-092207  vscode-extensions-with-desc.txt.2024-09-17-092316  vscode-extensions-with-desc.txt.2024-09-17-092507  vscode-extensions-with-desc.txt.2024-09-17-092528  vscode-extensions-with-desc.txt.2024-09-17-092651  vscode-extensions-with-desc.txt.2024-09-17-092714  vscode-extensions-with-desc.txt.2024-09-17-093124  vscode-extensions-with-desc.txt.2024-09-17-111447  vscode-extensions-with-desc.txt.2024-09-17-111640
distribution/: portable.py
singles/: nix.txt  (+17 more)
(+21 files in other folders)
