[tool.poetry]
name = "vscode-extension-manager"
version = "0.1.0"
description = "Effortlessly manage your vscode extenstions in each profile"
authors = ["Mike Crowe <drmikecrowe@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.8.1"
textual = "^0.81.0"
click = "^8.1.7"
requests = "^2.32.3"
prodict = "^0.8.18"
inquirer = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
